// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AlignmentView Align should render 1`] = `
<DocumentFragment>
  <div
    class="main-content-and-footer"
  >
    <div
      class="button-group"
    >
      <div
        class="dropdown-container"
      >
        <button
          class="button tertiary dropdown"
          type="button"
        >
          Highlight properties
        </button>
        <div
          class="dropdown-menu"
        />
      </div>
      <div
        class="dropdown-container"
      >
        <button
          class="button tertiary dropdown"
          type="button"
        >
          Select annotation
        </button>
        <div
          class="dropdown-menu"
        />
      </div>
      <fieldset
        class="msa-view-choice"
      >
        View:
        <label>
          <input
            checked=""
            name="view"
            type="radio"
          />
          Overview
        </label>
        <label>
          <input
            name="view"
            type="radio"
          />
          Wrapped
        </label>
      </fieldset>
    </div>
    <div>
      <protvista-tooltip />
      <section
        class="alignment-grid"
        data-testid="alignment-view"
      >
        <span
          class="track-label"
        >
          Overview
        </span>
        <div
          class="track"
        >
          <div>
            <protvista-track
              height="7"
              highlight="1:958"
              layout="non-overlapping"
              length="957"
            />
            <protvista-track
              height="7"
              highlight="1:958"
              layout="non-overlapping"
              length="957"
            />
            <protvista-track
              height="7"
              highlight="1:958"
              layout="non-overlapping"
              length="957"
            />
            <protvista-track
              height="7"
              highlight="1:958"
              layout="non-overlapping"
              length="957"
            />
          </div>
        </div>
        <span
          class="track-label"
          data-testid="track-label"
        >
          P05066:Domain
        </span>
        <div
          class="track"
        >
          <protvista-track
            highlight="1:958"
            layout="non-overlapping"
            length="957"
          />
        </div>
        <div
          class="track-label track-label--align-labels"
        >
          <button
            class="align-label align-label--active align-label--selectable"
            style="height: 20px;"
            tabindex="0"
            type="button"
          >
            <input
              type="checkbox"
            />
            <span
              class="entry-title__status icon--reviewed"
              title="This marks a reviewed UniProtKB entry"
            >
              <svg
                fill="currentColor"
                viewBox="0 0 426 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M432 144H288V0l144 144zM113 404l66 35-13-74 54-52-74-11-33-67-33 67-74 11 53 52-12 74 66-35zm-81 88v20h200l-119-63-81 43zm114-190l-33-67-33 67-48 7v29l27 27-12 74 66-35 66 35-13-74 54-52-74-11zm110-126V0H32v269l21-3 60-121 60 121 133 19-97 94 23 133h200V176H256z"
                />
              </svg>
            </span>
            sp|
            <a
              href="/uniprotkb/P05066"
            >
              P05066
            </a>
            |PHR_YEAST
          </button>
          <button
            class="align-label align-label--selectable"
            style="height: 20px;"
            tabindex="0"
            type="button"
          >
            <input
              type="checkbox"
            />
            <span
              class="entry-title__status icon--reviewed"
              title="This marks a reviewed UniProtKB entry"
            >
              <svg
                fill="currentColor"
                viewBox="0 0 426 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M432 144H288V0l144 144zM113 404l66 35-13-74 54-52-74-11-33-67-33 67-74 11 53 52-12 74 66-35zm-81 88v20h200l-119-63-81 43zm114-190l-33-67-33 67-48 7v29l27 27-12 74 66-35 66 35-13-74 54-52-74-11zm110-126V0H32v269l21-3 60-121 60 121 133 19-97 94 23 133h200V176H256z"
                />
              </svg>
            </span>
            sp|
            <a
              href="/uniprotkb/P05067"
            >
              P05067
            </a>
            |A4_HUMAN
          </button>
          <button
            class="align-label align-label--selectable"
            style="height: 20px;"
            tabindex="0"
            type="button"
          >
            <input
              type="checkbox"
            />
            <span
              class="entry-title__status icon--reviewed"
              title="This marks a reviewed UniProtKB entry"
            >
              <svg
                fill="currentColor"
                viewBox="0 0 426 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M432 144H288V0l144 144zM113 404l66 35-13-74 54-52-74-11-33-67-33 67-74 11 53 52-12 74 66-35zm-81 88v20h200l-119-63-81 43zm114-190l-33-67-33 67-48 7v29l27 27-12 74 66-35 66 35-13-74 54-52-74-11zm110-126V0H32v269l21-3 60-121 60 121 133 19-97 94 23 133h200V176H256z"
                />
              </svg>
            </span>
            sp|
            <a
              href="/uniprotkb/P05062"
            >
              P05062
            </a>
            |ALDOB_HUMAN
          </button>
          <button
            class="align-label align-label--selectable"
            style="height: 20px;"
            tabindex="0"
            type="button"
          >
            <input
              type="checkbox"
            />
            <span
              class="entry-title__status icon--reviewed"
              title="This marks a reviewed UniProtKB entry"
            >
              <svg
                fill="currentColor"
                viewBox="0 0 426 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M432 144H288V0l144 144zM113 404l66 35-13-74 54-52-74-11-33-67-33 67-74 11 53 52-12 74 66-35zm-81 88v20h200l-119-63-81 43zm114-190l-33-67-33 67-48 7v29l27 27-12 74 66-35 66 35-13-74 54-52-74-11zm110-126V0H32v269l21-3 60-121 60 121 133 19-97 94 23 133h200V176H256z"
                />
              </svg>
            </span>
            sp|
            <a
              href="/uniprotkb/P05064"
            >
              P05064
            </a>
            |ALDOA_MOUSE
          </button>
        </div>
        <div
          class="track"
        >
          <protvista-manager
            attributes="displaystart displayend"
            displayend="957"
            displaystart="1"
          >
            <protvista-navigation
              length="957"
            />
            <protvista-msa
              calculate-conservation="true"
              colorscheme="conservation"
              height="80"
              hidelabel="true"
              length="957"
              overlay-conservation="true"
            />
          </protvista-manager>
        </div>
        <span
          class="right-coord"
        >
          <div
            style="height: 20px;"
          >
            565
          </div>
          <div
            style="height: 20px;"
          >
            770
          </div>
          <div
            style="height: 20px;"
          >
            364
          </div>
          <div
            style="height: 20px;"
          >
            364
          </div>
        </span>
      </section>
    </div>
  </div>
</DocumentFragment>
`;

exports[`AlignmentView BLAST should render 1`] = `
<DocumentFragment>
  <div
    class="main-content-and-footer"
  >
    <div
      class="button-group"
    >
      <div
        class="dropdown-container"
      >
        <button
          class="button tertiary dropdown"
          type="button"
        >
          Highlight properties
        </button>
        <div
          class="dropdown-menu"
        />
      </div>
      <div
        class="dropdown-container"
      >
        <button
          class="button tertiary dropdown"
          type="button"
        >
          Select annotation
        </button>
        <div
          class="dropdown-menu"
        />
      </div>
      <fieldset
        class="msa-view-choice"
      >
        View:
        <label>
          <input
            checked=""
            name="view"
            type="radio"
          />
          Overview
        </label>
        <label>
          <input
            name="view"
            type="radio"
          />
          Wrapped
        </label>
      </fieldset>
    </div>
    <div>
      <protvista-tooltip />
      <section
        class="alignment-grid"
        data-testid="alignment-view"
      >
        <span
          class="track-label"
        >
          Overview
        </span>
        <div
          class="track"
        >
          <div>
            <protvista-track
              height="15"
              highlight="1:566"
              layout="non-overlapping"
              length="565"
            />
            <protvista-track
              height="15"
              highlight="1:566"
              layout="non-overlapping"
              length="565"
            />
          </div>
        </div>
        <span
          class="track-label"
          data-testid="track-label"
        >
          P05066:Domain
        </span>
        <div
          class="track"
        >
          <protvista-track
            highlight="1:566"
            layout="non-overlapping"
            length="565"
          />
        </div>
        <div
          class="track-label track-label--align-labels"
        >
          <span
            class="align-label"
          >
            Query
          </span>
          <button
            class="align-label"
            style="height: 20px;"
            tabindex="-1"
            type="button"
          >
            Match:
            <a
              href="/uniprotkb/P05066"
            >
              P05066
            </a>
          </button>
        </div>
        <div
          class="track"
        >
          <protvista-manager
            attributes="displaystart displayend"
            displayend="565"
            displaystart="1"
          >
            <protvista-navigation
              length="565"
            />
            <protvista-msa
              calculate-conservation="true"
              colorscheme="conservation"
              height="40"
              hidelabel="true"
              length="565"
              overlay-conservation="true"
            />
          </protvista-manager>
        </div>
        <span
          class="right-coord"
        >
          <div
            style="height: 20px;"
          >
            565
          </div>
          <div
            style="height: 20px;"
          >
            565
          </div>
        </span>
      </section>
    </div>
  </div>
</DocumentFragment>
`;
